# cmake build file for v^3
# (c) by Stefan Roettger

PROJECT(viewer)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

OPTION(BUILD_VIEWER_APPS "Build applications." ON)
OPTION(BUILD_VIEWER_TOOLS "Build command line tools." ON)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/viewer-config.cmake)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF (BUILD_VIEWER_APPS)
   MAKE_VIEWER_EXECUTABLE(v3)
ENDIF (BUILD_VIEWER_APPS)

IF (BUILD_VIEWER_TOOLS)
   ADD_SUBDIRECTORY(tools)
ENDIF (BUILD_VIEWER_TOOLS)

INSTALL(
   TARGETS ${VIEWER_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   PUBLIC_HEADER DESTINATION include/viewer
   )

IF (BUILD_VIEWER_APPS)
   INSTALL(
      TARGETS v3
      RUNTIME DESTINATION bin
      )
ENDIF (BUILD_VIEWER_APPS)
