# cmake build file for v^3
# (c) by Stefan Roettger

PROJECT(viewer)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

OPTION(BUILD_VIEWER_APPS "Build applications." ON)
OPTION(BUILD_VIEWER_TOOLS "Build command line tools." ON)

# include viewer config file
INCLUDE(viewer-config.cmake)

# include viewer source list
INCLUDE(viewer.cmake)

ADD_LIBRARY(${VOLREN_NAME} ${VOLREN_SRCS} ${VOLREN_HDRS})
SET_TARGET_PROPERTIES(${VOLREN_NAME} PROPERTIES PUBLIC_HEADER "${VIEWER_HDRS}" DEBUG_POSTFIX "d")
TARGET_LINK_LIBRARIES(${VOLREN_NAME} ${VOLREN_LIBRARY})

ADD_LIBRARY(${VIEWER_NAME} ${VIEWER_SRCS} ${VIEWER_HDRS})
SET_TARGET_PROPERTIES(${VIEWER_NAME} PROPERTIES PUBLIC_HEADER "${VIEWER_HDRS}" DEBUG_POSTFIX "d")
TARGET_LINK_LIBRARIES(${VIEWER_NAME} ${VIEWER_LIBRARY})

IF (BUILD_VIEWER_APPS)
   MAKE_VIEWER_EXECUTABLE(v3)
ENDIF (BUILD_VIEWER_APPS)

IF (BUILD_VIEWER_TOOLS)
   ADD_SUBDIRECTORY(tools)
ENDIF (BUILD_VIEWER_TOOLS)

INSTALL(
   TARGETS ${VOLREN_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   PUBLIC_HEADER DESTINATION include/volren
   )

INSTALL(
   TARGETS ${VIEWER_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   PUBLIC_HEADER DESTINATION include/viewer
   )

IF (BUILD_VIEWER_APPS)
   INSTALL(
      TARGETS v3
      RUNTIME DESTINATION bin
      )
ENDIF (BUILD_VIEWER_APPS)
