# cmake build file for v^3
# (c) by Stefan Roettger

IF (WIN32)
   SET(CMAKE_CONFIGURATION_TYPES "RelWithDebInfo" CACHE STRING "" FORCE)
ENDIF (WIN32)

PROJECT(viewer)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

OPTION(BUILD_VIEWER_APPS "Build applications." ON)
OPTION(BUILD_VIEWER_TOOLS "Build command line tools." ON)

# include viewer config file
INCLUDE(viewer-config.cmake)

# include viewer source list
INCLUDE(viewer.cmake)

ADD_LIBRARY(${VOLREN_NAME} ${VOLREN_SRCS} ${VOLREN_HDRS})
SET_TARGET_PROPERTIES(${VOLREN_NAME} PROPERTIES PUBLIC_HEADER "${VOLREN_HDRS}" DEBUG_POSTFIX "d")

ADD_LIBRARY(${VIEWER_NAME} ${VIEWER_SRCS} ${VIEWER_HDRS})
SET_TARGET_PROPERTIES(${VIEWER_NAME} PROPERTIES PUBLIC_HEADER "${VIEWER_HDRS}" DEBUG_POSTFIX "d")

IF (BUILD_VIEWER_APPS)
   MAKE_VIEWER_EXECUTABLE(v3)
ENDIF (BUILD_VIEWER_APPS)

IF (BUILD_VIEWER_TOOLS)
   ADD_SUBDIRECTORY(tools)
ENDIF (BUILD_VIEWER_TOOLS)

INSTALL(
   TARGETS ${VOLREN_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   PUBLIC_HEADER DESTINATION include
   )

IF (BUILD_VIEWER_APPS)
   INSTALL(
      TARGETS v3
      RUNTIME DESTINATION bin
      )
ENDIF (BUILD_VIEWER_APPS)
